# demo-analysis

./: .gitignore  Cargo.toml  README.md  pyproject.toml
assets/: sw.js
python/: analysis.ipynb  critheal_analysis.ipynb  demo_analysis.py  rotate_axes3d_sgskip.ipynb  wire3d_animation_sgskip.ipynb
python/demo_analysis_lib/: __init__.py  analysis.pyi  demo_analysis_lib.cp310-win_amd64.pyd  demo_analysis_lib.pyi  entities.pyi  events.pyi
python/tf2dal/: __init__.py  analysis.pyi  demo.pyi  entities.pyi  events.pyi  game.pyi  math.pyi  tf2dal.pyi
src/: __old_code..rs  app.rs  datatransmit.rs  lib.rs  main.rs
src/analysis/: data.rs  grouping.rs  mod.rs  sums.rs
src/parsing/: datacollection.rs  internals.rs  mod.rs  othershit.rs
src/shaders/: point.frag  point.vert
src/types/: __old_code..rs  analysis.rs  demo.rs  entities.rs  events.rs  game.rs  math.rs  mod.rs  weapon.rs
src/types/game/: entities.rs  events.rs  mod.rs
src/viewing/: drawing.rs  mod.rs  renderable.rs  shader.rs
